# text-suggestion-gui

./: Cargo.toml  readme.md
src/: main.rs  text_suggestion.rs
